--- a/bibbed.bib
+++ b/bibbed.bib
@@ -180,3 +180,86 @@ numpages = {35}
 	year = {2004},
 	note = {[Accessed 10-09-2024]},
 }
+
+@misc{analytical,
+  author = {Baldwin, Sarah},
+  title = {Ada Lovelace and the Analytical Engine},
+  howpublished = {\url{https://blogs.bodleian.ox.ac.uk/adalovelace/2018/07/26/ada-lovelace-and-the-analytical-engine/}},
+  year = {2018},
+  note = {[accessed 28-10-24]},
+}
+
+@book{10.5555/2621961,
+author = {Gregory, Jason},
+title = {Game Engine Architecture, Second Edition},
+year = {2014},
+isbn = {1466560010},
+publisher = {A. K. Peters, Ltd.},
+address = {USA},
+edition = {2nd},
+abstract = {A 2010 CHOICE outstanding academic title, this updated book covers the theory and practice of game engine software development. It explains practical concepts and techniques used by real game studios, such as Electronic Arts and Naughty Dog. Suitable for both beginners and seasoned engineers, the text includes all the required mathematical background. Examples are grounded in specific technologies, but the discussions extend beyond any particular engine or API. This edition adds new material, including a chapter on audio.}
+}
+
+@book{ibmMainframes,
+  author = {Kaisler, Stephen},
+  year = {2019},
+  month = {06},
+  pages = {},
+  title = {Second Generation Mainframes: The IBM 7000 Series}
+}
+
+@misc{accessTime,
+  author = {Makhija, Bharat Kumar},
+  title = {Learn how to elevate your system's performance with multi-level caching},
+  howpublished = {\url{https://medium.com/@bharatmakhija/learn-how-to-elevate-your-systems-performance-with-multi-level-caching-511efb774a6e}},
+  year = {2023},
+  note = {[accessed 28-10-24]},
+}
+
+@misc{stackFrame,
+  author = {Zhang, Jun},
+  title = {Stack frame and related operations},
+  howpublished = {\url{https://www.researchgate.net/figure/Stack-frame-and-related-operations_fig1_329007575}},
+  year = {2018},
+  note = {[accessed 30-10-24]},
+}
+
+@book{10.5555/202036,
+author = {Daconta, Michael C.},
+title = {C++ pointers and dynamic memory management},
+year = {1995},
+isbn = {0471049980},
+publisher = {Wiley-QED Publishing},
+address = {USA}
+}
+
+@misc{doom3-malloc,
+  author = {Smith, Forest},
+  title = {Benchmarking Malloc with Doom 3},
+  year = {2022},
+  howpublished = {\url{https://www.forrestthewoods.com/blog/benchmarking-malloc-with-doom3/}},
+  note = {[accessed 01-08-24]},
+}
+
+@misc{allignment,
+  title = {Data Structure Alignment},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Data_structure_alignment}},
+  year = {2024},
+  note = {[accessed 02-11-24]},
+}
+
+@misc{TLSF-implementation,
+  author = {Rasiukevicius, Mindaugas},
+  title = {TLSF: two-level segregated fit O(1) allocator},
+  howpublished = {\url{https://github.com/rmind/tlsf/tree/master}},
+  year = {2022},
+  note = {[accessed 12-10-24]},
+}
+
+@misc{free-list-implementation,
+  author = {Trebino, Mariano},
+  title = {memory-allocators},
+  howpublished = {\url{https://github.com/mtrebi/memory-allocators/tree/master}},
+  year = {2020},
+  note = {[accessed 14-10-24]},
+}
